# Chat-Server

./: .dockerignore  .env.example  Dockerfile  LIBRARY_USAGE.md  README.md  STREAMING_IMPLEMENTATION.md  docker-compose.yml  docker-compose.yml.example  pyproject.toml
app/: main.py
app/api/: sse_utils.py
app/api/v1/: __init__.py  models.py  openai.py  routes.py
app/core/: __init__.py  chain.py  config.py  handler.py  llm.py  logging.py  model_manager.py  plugin.py  proxy.py  retriever.py  server.py
app/models/: __init__.py  config.py  model.py
app/models/v1/: completions.py  models.py
app/plugins/: __init__.py  guardrails.py  logging.py
app/services/: chat.py
app/v1/: routes.py
chat_completion_server/core/: logging.py  model_manager.py  proxy_handler.py  server.py  tool_use.py
chat_completion_server/models/: config.py
examples/: custom_handler.py  custom_models.py  custom_plugin.py  minimal_usage.py
tests/core/: test_handler.py  test_model_manager.py  test_normalizer.py  test_proxy_handler.py  test_server_constructor.py  test_server_middleware.py  test_server_process_request.py
tests/models/v1/: test_completions.py
tests/plugins/: test_logging_plugin.py
